<resources>
    <string name="app_name">FitME</string>

    <string name="MAPS_API_kEY">AIzaSyAzohx_00_q4jtGxXpyJyYm8qaU77zHqho</string>

    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="inviteFriends">Hi! I use FitME app to track my runs and walking stats. Use my invite link to download the app - https://drive.google.com/drive/folders/1tmUjJbfLZajQUwAkBN9LgoJldlOtbSmC?usp=sharing\n\n Stay fit, Stay healthy!\n Thankyou! </string>

    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>

    <string name="about_app_description_title">Description</string>
    <string name="about_app_description">A Running Tracker App which tracks run or walk distance by using maps SDK and performs some tasks, show track routes on the maps, schedule things, shows articles by Android Jetpack Architecture. Tracks health of user by runs and calories burns and show user\'s statistics. Features: Track running track distance, steps, calories, and weather, provides diet plans, exercises, workout, and recommended youtube videos, setup alerts and goals for daily achievements, view statistics etc. Objective</string>
    <string name="about_app_objective_title">Objective</string>
    <string name="about_app_objective">The number of smartphone users has spread rapidly around the globe, along with this the use of Health and fitness apps has also increased because people prefer to track their fitness from their mobile rather than the traditional method of going and seeing a doctor. Several health and fitness apps in the market are loaded with tons of features, hat but these irrelevant features distract the user and also make the app complex to use, taking away the main purpose of the app. So keeping in mind all these factors we have developed a fitness app FITME which is user-friendly and easy to use and has a hassle-free experience t does not distract the users from their main goal.</string>
    <string name="about_us_tech_stack">Tech Stack</string>
    <string name="about_us_dependencies">Dependencies</string>
    <string name="about_us_dependencies_text">Dagger Hilt (Dependency Injection), MVVM/MVP, ROOM Database, Retrofit, Navigation, Glide, Maps, charts and many dependencies.</string>
    <string name="about_us_share">Share app</string>
    <string name="about_us_tech_stack_string">Client: Kotlin, SQLite(Room), Android Studio \nAPI\'s: weatherapi, newsapi(for articles)\nSDK\'s: Google MAP\'s SDK</string>
    <string name="img">img</string>
</resources>